# snatch

./: Cargo.toml  GEMINI.md  README.md
.github/workflows/: publish.yml
snatch-ui/: index.html  package-lock.json  package.json  tailwind.config.ts
snatch-ui/src/: App.css  App.tsx
snatch-ui/src-tauri/: Cargo.toml  tauri.conf.json
snatch-ui/src-tauri/binaries/: snatch-x86_64-unknown-linux-gnu
snatch-ui/src-tauri/capabilities/: default.json  snatch-sidecar.json
snatch-ui/src-tauri/src/: lib.rs  main.rs
snatch-ui/src/components/: ChatModule.tsx  DiffViewer.tsx  GitGraph.tsx  SaveBar.tsx  SettingsModule.tsx  SnapshotsModule.tsx  SquashModal.tsx  Terminal.tsx  WelcomeScreen.tsx
snatch-ui/src/lib/: ai.ts  git.ts  settings.ts  snatch.ts
snatch-ui/src/styles/: theme.ts
src/: config.rs  error.rs  main.rs
src/commands/: diff.rs  drop.rs  init.rs  list.rs  mod.rs  restore.rs  save.rs  squash.rs
src/git/: mod.rs  refs.rs  snapshot.rs
tests/: integration_test.rs
